--- a/templates/channels/program.html
+++ b/templates/channels/program.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="{{ .Host }}/styles/{{ .Id }}.css" />
+  <link type="text/css" rel="stylesheet" href="{{ .Host }}/styles/{{ .Id }}.css" />
 </head>
 
 <body>
