--- a/public/styles/lnk.css
+++ b/public/styles/lnk.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
+body {
+  background-color: white;
+}
+
 .program-list {
   margin-bottom: 2rem;
   font-family: Roboto;
@@ -20,7 +24,7 @@
 
 .program-item-image img {
   border-radius: 0.3rem;
-  max-width: 11rem;
+  max-width: 8rem;
   height: auto;
   display: block;
 }
