--- a/public/styles/lnk.css
+++ b/public/styles/lnk.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
+html,
 body {
   background-color: white;
+  margin: 0px;
+  padding: 0px;
 }
 
 .program-list {
